--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 1.5;
+}
