--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ body {
     font-style: normal;
     line-height: 1.5;
 }
+
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1.2fr 5fr;
+    grid-template-rows: 1fr 3fr;
+}
