--- a/style.css
+++ b/style.css
@@ -17,3 +17,14 @@ body {
     grid-template-columns: 1.2fr 5fr;
     grid-template-rows: 1fr 3fr;
 }
+
+aside {
+    background-color: #0284C7;
+    color: #FFFFFF;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+    align-items: start;
+    padding: 10px;
+}
