--- a/style.css
+++ b/style.css
@@ -28,3 +28,24 @@ aside {
     align-items: start;
     padding: 10px;
 }
+
+img {
+    object-fit: contain;
+    display: block;
+    max-inline-size: 100%;
+}
+
+.profile-pic {
+    background-color: rgb(255, 200, 0);
+    object-fit: contain;
+    width: 25px;
+    min-width: 30px;
+    height: auto;
+    padding:4px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.large {
+    width: 50px;
+}
