--- a/style.css
+++ b/style.css
@@ -86,3 +86,14 @@ header {
     align-items: center;
     gap: 20px;
 }
+
+.search>div {
+    font-size: min(1.2rem, 1.5vw);
+    margin-left: 30px;
+}
+.search>input {
+    background-color: #E5E7EB;
+    margin-right: 1rem;
+    border-radius: 20px 20px;
+    border-style: none;
+}
