--- a/style.css
+++ b/style.css
@@ -97,3 +97,9 @@ header {
     border-radius: 20px 20px;
     border-style: none;
 }
+
+.icon {
+    width: 2vw;
+    height: auto;
+    min-width: 2vw;
+}
