--- a/style.css
+++ b/style.css
@@ -127,3 +127,100 @@ button{
     border-radius: 20px;
     font-size: min(1rem, 1.5vw);
 }
+
+main {
+    background-color: #E5E7EB;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 20px 25px 30px;
+    row-gap: 10px;
+    box-shadow: inset 0 10px 10px lightgray;
+}
+
+.projects {
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    padding-right: 20px;
+}
+
+.pro-icons {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    justify-content: end;
+    gap: 30px;
+}
+
+.announcements-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: white;
+    border-radius: 10px 10px;
+    padding: 0 20px;
+}
+
+.announcements-main>div:nth-child(n+2) {
+    border-top: solid #e5e7eb 2px;
+}
+
+.trending-main {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    background-color: white;
+    gap: 20px;
+    padding: 10px 5px;
+    border-radius: 10px 10px;
+    color: black;
+    font-size: min(1rem, 1vw);
+}
+
+.trending-main>div>div+div {
+    color: gray;
+}
+
+.projects-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+
+.projects-main>div {
+    background-color: white;
+    border-left: solid orange 10px;
+    padding: 30px 20px 10px;
+    border-radius: 10px 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    color: gray;
+    font-size: min(1rem, 1vw);
+}
+
+.title {
+    margin-bottom: 10px;
+    color: black;
+    font-size: min(1.5rem, 1.7vw);
+}
+
+.name {
+    color: black;
+    font-size: min(1.2rem, 1.5vw);
+}
+  
+.announcements-main>div {
+    color: gray;
+    font-size: min(0.8rem, 1vw);
+    padding: 20px 0px;
+}
+
+.anno-title {
+    color: black;
+    font-size: min(1rem, 1.1vw);
+}
+
+.projects-main>div, 
+.announcements-main, 
+.trending-main {
+    box-shadow: 5px 5px 5px lightgray;
+}
